Bug 514932. Fix color profile retrieval on OS X 10.6. r=joshmoz, r=joe

CMGetDeviceProfile(cmDisplayDeviceClass,
                cmDefaultDeviceID,
                cmDefaultProfileID,
                &device);
returns cmDeviceNotRegistered on 10.6 so we need to use a different method
to get the profile.

This also fixes compilation on 10.4 by using reinterpret_cast<> instead of
static_cast<>