gfx/thebes/src/gfxPlatformMac.cpp
@@ -401,20 +401,52 @@ gfxPlatformMac::ReadAntiAliasingThreshold()
 qcms_profile *
 gfxPlatformMac::GetPlatformCMSOutputProfile()
 {
-    CMProfileLocation device;
-    CMError err = CMGetDeviceProfile(cmDisplayDeviceClass,
-                                     cmDefaultDeviceID,
-                                     cmDefaultProfileID,
-                                     &device);
+    qcms_profile *profile = nsnull;
+    CMProfileRef cmProfile;
+    CMProfileLocation *location;
+    UInt32 locationSize;
+
+    /* There a number of different ways that we could try to get a color
+       profile to use.  On 10.5 all of these methods seem to give the same
+       results. On 10.6, the results are different and the following method,
+       using CGMainDisplayID() seems to best match what we are looking for.
+       Currently, both Google Chrome and Qt4 use a similar method.
+
+       CMTypes.h describes CMDisplayIDType:
+       "Data type for ColorSync DisplayID reference
+        On 8 & 9 this is a AVIDType
+	On X this is a CGSDisplayID"
+
+       CGMainDisplayID gives us a CGDirectDisplayID which presumeably
+       corresponds directly to a CGSDisplayID */
+    CGDirectDisplayID displayID = CGMainDisplayID();
+
+    /* On OS X 10.4 CGDirectDisplayID is of type 'struct _CGDirectDisplayID *' whereas it is of
+       type 'uint32_t' on OS X 10.5. Therefore, we need to use reinterpret_cast instead of static_cast
+       to cover converting from a pointer or from an integer */
+    CMError err = CMGetProfileByAVID(reinterpret_cast<CMDisplayIDType>(displayID), &cmProfile);
     if (err != noErr)
         return nsnull;
 
-    qcms_profile *profile = nsnull;
-    switch (device.locType) {
+    // get the size of location
+    err = NCMGetProfileLocation(cmProfile, NULL, &locationSize);
+    if (err != noErr)
+        return nsnull;
+
+    // allocate enough room for location
+    location = static_cast<CMProfileLocation*>(malloc(locationSize));
+    if (!location)
+        goto fail_close;
+
+    err = NCMGetProfileLocation(cmProfile, location, &locationSize);
+    if (err != noErr)
+        goto fail_location;
+
+    switch (location->locType) {
 #ifndef __LP64__
     case cmFileBasedProfile: {
         FSRef fsRef;
-        if (!FSpMakeFSRef(&device.u.fileLoc.spec, &fsRef)) {
+        if (!FSpMakeFSRef(&location->u.fileLoc.spec, &fsRef)) {
             char path[512];
             if (!FSRefMakePath(&fsRef, reinterpret_cast<UInt8*>(path), sizeof(path))) {
                 profile = qcms_profile_from_path(path);
@@ -429,7 +461,7 @@ gfxPlatformMac::GetPlatformCMSOutputProfile()
     }
 #endif
     case cmPathBasedProfile:
-        profile = qcms_profile_from_path(device.u.pathLoc.path);
+        profile = qcms_profile_from_path(location->u.pathLoc.path);
 #ifdef DEBUG_tor
         if (profile)
             fprintf(stderr,
@@ -444,6 +476,10 @@ gfxPlatformMac::GetPlatformCMSOutputProfile()
         break;
     }
 
+fail_location:
+    free(location);
+fail_close:
+    CMCloseProfile(cmProfile);
     return profile;
 }
 
